# myCpp

./: .dockerignore  CMakeLists.txt  Dockerfile  Readme.md  main.cpp  toolchain.md
.cache/clangd/index/: main.cpp.3AAAFDD2CDE1D3C2.idx
